--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <title>TODO</title>
         <link rel="stylesheet" href="main.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.12.0/umd/react.production.min.js" integrity="sha256-Ef0vObdWpkMAnxp39TYSLVS/vVUokDE8CDFnx7tjY6U=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.11.0/umd/react-dom.production.min.js" integrity="sha256-zuSDvIPhgPCvDFw3HdbA58QUOOGxPbs4llUvBOPxvjY=" crossorigin="anonymous"></script>
     </head>
     <body>
-        <canvas id="canvas" width="300" height="300" tabindex="1"></canvas>
-        <script src="main.ts"></script>
+        <div id="root"></div>
+        <script src="main.tsx"></script>
     </body>
 </html>
