Add input elements

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.11.0/umd/react-dom.production.min.js" integrity="sha256-zuSDvIPhgPCvDFw3HdbA58QUOOGxPbs4llUvBOPxvjY=" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div id="root"></div>
+        <div id="inputRoot"></div>
+        <div id="outputRoot"></div>
         <script src="main.tsx"></script>
     </body>
 </html>
