--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                             <li>x: number (immutable)</li>
                             <li>y: number (immutable)</li>
                             <li>radius: number (immutable)</li>
-                            <li>moveAngle: number (in radians)</li>
-                            <li>aimAngle: number (in radians)</li>
-                            <li>move: boolean (true if robot should move in the direction of moveAngle</li>
-                            <li>shoot: boolean (true if the robot should fire in the direction of aimAngle</li>
+                            <li>moveDirection: number (in radians)</li>
+                            <li>shootDirection: number (in radians)</li>
+                            <li>move: boolean (true if robot should move in the direction of moveDirection</li>
+                            <li>shoot: boolean (true if the robot should fire in the direction of shootDirection</li>
                         </ul>
                     </li>
                     <li>environment
