--- a/index.html
+++ b/index.html
@@ -11,51 +11,10 @@
             <h1>Cyber Coliseum</h1>
             <blockquote>"The wars of the future will not be fought on the battlefield or at sea. They will be fought in space, or possibly on top of a very tall mountain. In either case, most of the actual fighting will be done by small robots. And as you go forth today remember always your duty is clear: to build and maintain those robots."</blockquote>
             <p>The Cyber Coliseum hosts battles to the destruction between two robots that are programmed using JavaScript. The robots can move and shoot projectiles at each other. If a robot absorbs 10 direct hits, the robot is destroyed.</p>
-            <p>Program your robot by declaring a "think" function that accepts two arguments:
+            <p>Program your robot by declaring a "think" function that accepts two arguments (note: the editor provides automatic code suggestions that describe the available properties on these objects):
                 <ul>
                     <li>"self" (which represents your robot's internal state)</li>
-                    <li>"environment" (which represents the environment)</li>
-                </ul>
-                The interfaces of these objects are as follows:
-                <ul>
-                    <li>self
-                        <ul>
-                            <li>x: number (immutable)</li>
-                            <li>y: number (immutable)</li>
-                            <li>radius: number (immutable)</li>
-                            <li>moveDirection: number (in radians)</li>
-                            <li>shootDirection: number (in radians)</li>
-                            <li>move: boolean (true if robot should move in the direction of moveDirection</li>
-                            <li>shoot: boolean (true if the robot should fire in the direction of shootDirection</li>
-                        </ul>
-                    </li>
-                    <li>environment
-                        <ul>
-                            <li>bounds
-                                <ul>
-                                    <li>xMin: -10</li>
-                                    <li>xMax: 10</li>
-                                    <li>yMin: -10</li>
-                                    <li>yMax: 10</li>
-                                </ul>
-                            </li>
-                            <li>enemies[] (array, currently always length 1)
-                                <ul>
-                                    <li>x: number</li>
-                                    <li>y: number</li>
-                                    <li>radius: number</li>
-                                </ul>
-                            </li>
-                            <li>enemyProjectiles[] (array)
-                                <ul>
-                                    <li>x: number</li>
-                                    <li>y: number</li>
-                                    <li>angle: number</li>
-                                    <li>speed: number (distance per tick)</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
+                    <li>"environment" (which represents the environment, i.e. boundaries and state of the enemy and its projectiles)</li>
                 </ul>
             </p>
         </div>
@@ -64,6 +23,24 @@
         <div id="outputRoot"></div>
 
         <script src="main.tsx"></script>
-    </body>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.18.1/min/vs/loader.js" integrity="sha256-9PmSVz04j4dZjCddom+Fl6aIATeO6EOBZscDuuG/odA=" crossorigin="anonymous"></script>
+        <script>
+          require.config({ paths: { 'vs': 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.18.1/min/vs' }});
+          window.MonacoEnvironment = {
+            getWorkerUrl: function(workerId, label) {
+              return `data:text/javascript;charset=utf-8,${encodeURIComponent(`
+                self.MonacoEnvironment = {
+                  baseUrl: 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.18.1/min/'
+                };
+                importScripts('https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.18.1/min/vs/base/worker/workerMain.js');`
+              )}`;
+            }
+          };
+        
+          require(["vs/editor/editor.main"], function () {
+              window.monacoShim.ready();
+          });
+        </script>
+    </body>
 </html>
