Intro message box

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <div id="inputRoot"></div>
         <div id="outputRoot"></div>
 
+        <div id="messageBoxRoot"></div>
+
         <script src="main.tsx"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.18.1/min/vs/loader.js" integrity="sha256-9PmSVz04j4dZjCddom+Fl6aIATeO6EOBZscDuuG/odA=" crossorigin="anonymous"></script>
