Message box class

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.11.0/umd/react-dom.production.min.js" integrity="sha256-zuSDvIPhgPCvDFw3HdbA58QUOOGxPbs4llUvBOPxvjY=" crossorigin="anonymous"></script>
     </head>
     <body>
+      <div id="root">
+        <div id="left">
+        </div>
+        <div id="right">
+          <div id="infoRoot"></div>
+          <div id="codeRoot"></div>
+
+          <div id="inputRoot"></div>
+          <div id="outputRoot"></div>
+        </div>
+      </div>
         <div class="info">
             <h1>Cyber Coliseum</h1>
             <p>Program your robot by declaring a "think" function that accepts two arguments (note: the editor provides automatic code suggestions that describe the available properties on these objects):
@@ -17,8 +28,6 @@
             </p>
         </div>
 
-        <div id="inputRoot"></div>
-        <div id="outputRoot"></div>
 
         <div id="messageBoxRoot"></div>
 
