Re-enable minify with fix

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Cyber Coliseum</title>
         <link rel="stylesheet" href="main.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.11.0/umd/react.production.min.js" integrity="sha256-Izg5jrIWaZS6OBjRfe9AN/kiiIVYFTgcKukJsfK8Or0=" crossorigin="anonymous"></script>
